secondfile/objects/BID_Migration_Log__c.object
<CustomObject>
    <fields>
        <fullName>BID_Migration_Transaction_ID__c</fullName>
        <label>BID Migration Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BID Migration Logs</relationshipLabel>
        <relationshipName>BID_Migration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>BID Migration Logs</relationshipLabel>
        <relationshipName>BID_Migration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BID Migration Log</label>
    <nameField>
        <label>BID Migration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BID Migration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>